--- a/StatusClientePstServ/web/index.xhtml
+++ b/StatusClientePstServ/web/index.xhtml
@@ -22,9 +22,10 @@
             <p></p>
             <br/>
             <form method="post" onsubmit="return validateForm()" action="">
+                <input placeholder="Matrícula" type="text" id="secao" />
+                <label id="cidade"></label>
                 <input placeholder="Matrícula" type="text" id="matr" />
-                <p id="codigo" class="card-text"></p>
-                <input placeholder="Token" type="text" id="token" value="B8489FF7205E3217B4E043D70FF9848B" />
+                <label id="mnome"></label>
             
         
         <div class="card" style="width: 96%; margin: 2%">
@@ -35,19 +36,31 @@
                             <div class="card-body">
                                 <table>
                                     <tr>
-                                        <td><img src="logosasw.jpg" alt="" width="150" /></td>
+                                        <td><img src="images/logosasw.jpg" alt="" width="150" /></td>
                                         <td><h5 class="card-title">SASw Tecnologia</h5></td>
                                     </tr>
                                 </table> 
                                 <hr/>
                                 <table>
                                     <tr>
-                                        <td style="float:left !important;"><img src="mapa.jpg" width="200" height="150" /></td>
-                                        <td style="float:left !important; text-align: left"><p class="card-text"><strong>Posto de serviço: </strong> 999.00001.001C - POSTO B</p></td>
-                                        <td style="float:left !important; text-align: left"><p class="card-text"><strong>Local: </strong> Sasw Administração</p></td>
-                                        <td style="float:left !important; text-align: left"><p class="card-text"><strong>Endereço:</strong> SIG qd. 6 Brasília  Sala 120</p></td>
-                                        <td style="float:left !important; text-align: left"><p class="card-text"><strong>Descrição: </strong> Estagiário 6:00 HS</p></td>
-                                        <td style="float:left !important; text-align: left"><p class="card-text"><strong>Latitude/Longitude: </strong> -15.80160088/-47.8699575</p></td>
+                                        <td style="float:left !important;">
+                                            <img src="images/mapa.jpg" width="200" height="150" />
+                                        </td>
+                                        <td style="float:left !important; text-align: left">
+                                            <p class="card-text"><strong>Posto de serviço: </strong> 999.00001.001C - POSTO B</p>
+                                        </td>
+                                        <td style="float:left !important; text-align: left">
+                                            <p class="card-text"><strong>Local: </strong> Sasw Administração</p>
+                                        </td>
+                                        <td style="float:left !important; text-align: left">
+                                            <p class="card-text"><strong>Endereço:</strong> SIG qd. 6 Brasília  Sala 120</p>
+                                        </td>
+                                        <td style="float:left !important; text-align: left">
+                                            <p class="card-text"><strong>Descrição: </strong> Estagiário 6:00 HS</p>
+                                        </td>
+                                        <td style="float:left !important; text-align: left">
+                                            <p class="card-text"><strong>Latitude/Longitude: </strong> -15.80160088/-47.8699575</p>
+                                        </td>
 
                                     </tr>
 
@@ -61,8 +74,10 @@
                                 <table>
                                     <tr>
                                         <td><h5>Funcionários</h5></td>
-                                        <td><label class="batida-entrada" style="width: 120px !important; background-color: green; margin-left: 300%;
-                                                   border-radius: 30px; text-align: center; color: white; font-weight: bold !important">Entrada</label></td>
+                                        <td>
+                                            <label class="batida-entrada" style="width: 120px !important; background-color: green; margin-left: 300%;
+                                                   border-radius: 30px; text-align: center; color: white; font-weight: bold !important">Entrada</label>
+                                        </td>
                                     </tr>
 
                                 </table> 
@@ -75,14 +90,28 @@
 
                                     <thead>
                                         <tr>
-                                            <th style="float:left !important; border: 2px solid #ddd; border-radius: 50%"><img src="images/FotoND.jpg" width="50" height="50" id="imgsrv" style="border-radius: 80%" /></th>    
-                                            <td style="float:left !important; text-align: left"><i class="fa fa-certificate" style="width:20px !important;"></i><b class="card-text" >Nome: </b><label id="nome"></label></td><br/>
-                                            <td style="float:left !important; text-align: left"><i class="fa fa-id-card-o" style="width:20px !important; text-align:center !important;"></i><b class="card-text" >Função: </b> Estagiário(a)</td><br/>
+                                            <th style="float:left !important; border: 2px solid #ddd; border-radius: 50%">
+                                                <img src="images/FotoND.jpg" width="60" height="60" id="imgsrv" style="border-radius: 80%" />
+                                            </th>    
+                                            <td style="float:left !important; text-align: left">
+                                                <i class="fa fa-certificate" style="width:20px !important;"></i>
+                                                <b class="card-text" >Nome: </b><label id="nome"></label>
+                                            </td><br/>
+                                            <td style="float:left !important; text-align: left">
+                                                <i class="fa fa-id-card-o" style="width:20px !important; text-align:center !important;"></i>
+                                                <b class="card-text" >Função: </b> Estagiário(a)
+                                            </td><br/>
 
                                         </tr>
                                         <tr>
-                                            <td style="float:left !important; text-align: left; margin-left: 12%"><i class="fa fa-clock-o" aria-hidden="true" style="width: 20px; text-align: center"></i><b class="card-text">Hora Entrada: </b> 08:58 </td>
-                                            <td style="float:left !important; margin-left: 2%"><i class="fa fa-clock-o" aria-hidden="true" style="width: 20px; text-align: center"></i><b class="card-text">Hora Saída </b>15:01 </td>
+                                            <td style="float:left !important; text-align: left; margin-left: 12%">
+                                                <i class="fa fa-clock-o" aria-hidden="true" style="width: 20px; text-align: center"></i>
+                                                <b class="card-text">Hora Entrada: </b> 08:58 
+                                            </td>
+                                            <td style="float:left !important; margin-left: 2%">
+                                                <i class="fa fa-clock-o" aria-hidden="true" style="width: 20px; text-align: center"></i>
+                                                <b class="card-text">Hora Saída </b>15:01 
+                                            </td>
 
                                         </tr>
                                     </thead>
@@ -97,14 +126,24 @@
                                 <table> 
                                     <thead>
                                         <tr>
-                                            <th style="float:left !important; border: 2px solid #ddd; border-radius: 50%"><img src="perfil.jpg" width="50" height="50" style="border-radius: 80%" /></th>    
-                                            <td style="float:left !important; text-align: left"><b class="card-text">Matrícula: 18290 </b>- ESTHER MASSABANE MYNSSEN</td><br/>
-                                            <td style="float:left !important; text-align: left"><p class="card-text"><strong>Função: </strong> Estagiário(a) </p></td><br/>
+                                            <th style="float:left !important; border: 2px solid #ddd; border-radius: 50%">
+                                                <img src="images/perfil.jpg" width="60" height="60" style="border-radius: 80%" />
+                                            </th>    
+                                            <td style="float:left !important; text-align: left">
+                                                <b class="card-text">Matrícula: 18290 </b>- ESTHER MASSABANE MYNSSEN
+                                            </td><br/>
+                                            <td style="float:left !important; text-align: left">
+                                                <p class="card-text"><strong>Função: </strong> Estagiário(a) </p>
+                                            </td><br/>
 
                                         </tr>
                                         <tr>
-                                            <td style="float:left !important; text-align: left; margin-left: 13%"><b class="card-text">Hora Entrada: </b> 09:01 </td>
-                                            <td style="float:left !important; margin-left: 2%"><b class="card-text">Hora Saída </b>15:02 </td>
+                                            <td style="float:left !important; text-align: left; margin-left: 13%">
+                                                <b class="card-text">Hora Entrada: </b> 09:01 
+                                            </td>
+                                            <td style="float:left !important; margin-left: 2%">
+                                                <b class="card-text">Hora Saída </b>15:02 
+                                            </td>
 
                                         </tr>
                                     </thead> 
