--- a/StatusClientePstServ/web/index.html
+++ b/StatusClientePstServ/web/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/23e52faa1b.js" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly" async></script>
 </head>
 
 <body id="home">
@@ -23,7 +24,7 @@
 
     <div id="control">
         <p></p>
-        <form method="post"  action="">
+        <form method="post" action="">
             <input placeholder="Matrícula" type="text" id="secao" value="999.00001.001A" style="margin-left: 2%;" />
 
 
@@ -46,9 +47,6 @@
                                     <hr />
                                     <table>
                                         <tr>
-                                            <td style="float:left !important;">
-                                                <img src="images/mapa.jpg" width="200" height="150" />
-                                            </td>
                                             <td style="float:left !important; text-align: left">
                                                 <p class="card-text"><strong>Cidade:</strong><label id="cidade"></label>
                                                 </p>
@@ -73,7 +71,12 @@
                                                 <p class="card-text"><strong>CEP:</strong><label id="cep"></label></p>
                                             </td>
                                         </tr>
-
+                                        <tr>
+                                            <td>
+                                                <label style="background-color: steelblue; color: #FFF; width: 93%; text-align: center; padding: 5px; font-weight: bold; margin: 0px; font-size: 10pt"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Localização</label>
+                                                <img src="images/mapa.jpg" width="550" height="200" style="margin: 0%;"/>
+                                            </td>
+                                        </tr>
                                     </table>
                                 </div>
                             </div>
@@ -148,7 +151,10 @@
             <button onclick="obtFoto()" id="imageRead"> Enviar </button>
             <!--button onclick="obtFoto()">teste</button>-->
         </label>
+
+        <div id="map"></div>
     </div>
+
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -161,4 +167,3 @@
 </body>
 
 </html>
-
